<resources>
    <string name="app_name">MapTracker</string>
    <string name="title_activity_maps">Map</string>
    <string name="button_load_db">Get DB</string>
    <string name="button_load_cloud">Get Pos</string>
    <string name="time_string">14:00:15</string>
    <string name="wifi_string">wifi</string>
    <string name="latitude_string">60</string>
    <string name="accuracy_string">205</string>
    <string name="send_to_cloud">Send to Cloud</string>
    <string name="reset">Reset</string>
    <string name="string_date">23–09–2020</string>
    <string name="accuracy_title">a:</string>
    <string name="speed_title">s:</string>
    <string name="height_title">h:</string>
    <string name="content_description_db">DB</string>
    <string name="content_description_get_from_cloud">Get From Cloud</string>
    <string name="content_description_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="launch_activity">Open MapTracker</string>
    <string name="location_unknown">Location unknown</string>
    <string name="location_updates_label">Location Updates</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="ok">OK</string>
    <string name="request_location_updates">Request location updates</string>
    <string name="remove_location_updates">Remove location updates</string>

    <!-- Preference Titles -->
    <string name="gps_header">GPS</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="seconds_title">Seconds</string>
    <string name="distance_summary">Minimum distance between logging</string>
    <string name="distance_title">Distance</string>
    <string name="accuracy_title2">Set GPS mode</string>
    <string name="power_title">Set power</string>
    <string name="power_summary">Choose power plan</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync only on wifi</string>
    <string name="download_title">Download manually</string>
    <string name="download_summary_on">Automatically download positions when app opens
    </string>
    <string name="download_summary_off">Use "Download" button to download manually</string>
    <string name="draw_lines">Lines</string>

    <string name="seconds_value">10</string>
    <string name="accuracy_key">accuracy</string>
    <string name="power_key">power</string>
    <string name="download_from_cloud">Download from cloud</string>
    <string name="location_table">Location table</string>
    <string name="settings">Settings</string>
    <string name="delete_all_my_positions">Delete</string>
    <string name="key_reset_value">key_reset</string>
    <string name="key_send_value">key_send_current</string>
    <string name="key_unsent_value">key_unsent</string>
    <string name="permission_warning">This app will not work without permissions</string>
    <string name="map_speed_text">\"Speed: \"</string>
    <string name="accuracy_text">\"Accuracy: \"</string>

</resources>
