<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:title="Map">

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="key_lines"
            android:summary="Draw lines between markers"
            android:title="Lines" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/gps_header">

        <ListPreference
            app:defaultValue="4"
            app:entries="@array/seconds_array_entries"
            app:entryValues="@array/seconds_array_values"
            app:key="key_min_seconds"
            app:title="@string/seconds_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="6"
            app:entries="@array/distance_array_entries"
            app:entryValues="@array/distance_array_values"
            app:key="key_min_distance"
            app:title="@string/distance_title"
            android:summary="@string/distance_summary"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="ACCURACY_FINE"
            app:entries="@array/accuracy_entries"
            app:entryValues="@array/accuracy_values"
            app:key="key_accuracy"
            app:title="@string/accuracy_title2"
            app:useSimpleSummaryProvider="true" />
        <Preference
            android:key="@string/key_reset_value"
            android:title="Delete"
            android:summary="Wipe out all my data"
            />

        <Preference
            android:key="@string/key_send_value"
            android:title="Send"
            android:summary="Send current location now"/>

        <Preference
            android:key="@string/key_unsent_value"
            android:title="Mark as unsent"
            android:summary="Mark all rows as unsent"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="key_cloud"
            app:title="Sync with cloud" />

        <SwitchPreferenceCompat
            app:key="key_sync"
            app:title="@string/sync_title"
            app:dependency="key_cloud"
            />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:dependency="key_cloud"
            app:key="key_download"
            app:summaryOff="@string/download_summary_off"
            app:summaryOn="@string/download_summary_on"
            app:title="@string/download_title" />

    </PreferenceCategory>
    <PreferenceCategory android:title="Power">
        <ListPreference
            app:defaultValue="POWER_MEDIUM"
            app:entries="@array/power_entries"
            app:entryValues="@array/power_values"
            app:key="key_power"
            app:title="@string/power_title"
            app:summary="@string/power_summary"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Tools">
        <SwitchPreference app:defaultValue="false"
            android:title="Toast"
            android:summary="Display info in toast"
            android:key="key_toast"/>

        <SwitchPreference app:defaultValue="false"
            android:title="Volume"
            android:summary="Play sound for every position"
            android:key="key_sound"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="Markers">
        <SwitchPreference app:defaultValue="false"
            android:title="Display every marker"
            android:key="key_marker"/>

        <SwitchPreference app:defaultValue="false"
            android:title="Group"
            android:summary="Group markers by activity"
            android:key="key_group"/>

    </PreferenceCategory>

</PreferenceScreen>
